@@ -35,6 +35,12 @@
   <url type="homepage">https://nongnu.org/gsequencer</url>
 
   <releases>
+    <release version="3.5.12" date="2020-09-18">
+      <description>
+	<p>Fixed missing reset of notation edit's horizontal scrollbar after zoom changed.</p>
+      </description>
+    </release>
+
     <release version="3.5.11" date="2020-09-18">
       <description>
 	<p>Fixed shrink audio channels.</p>
